# Kefir

./: .env.example  .gitignore  db.py  kfr_python_junior_test_openapi.json  main.py  pyproject.toml
crud/: admin.py  user.py
endpoints/: admin.py  login.py  user.py
models/: city.py  user.py
schemas/: admin.py  city.py  errors.py  login.py  user.py
utils/: auth.py  authfunc.py
